--- a/style.css
+++ b/style.css
@@ -14,10 +14,14 @@ header{
      
        
 }
+.logo{
+    height: 60px;
+    width: 140px;
+}
 
 .container{
-    width: 100%;
-    max-width: 1600px;
+    
+    max-width: 1350px;
     margin: auto;
 
 }
@@ -26,7 +30,7 @@ nav img{
 }
 
 .btn{
-    border: none;
+    border: none; 
     border-radius: 4px;
     border-radius: 4px;
     background:  rgba(70, 145, 101, 1);
@@ -51,4 +55,85 @@ nav{
 .menu a {
     text-decoration: none;
 
+}
+
+.hero {
+  height: 100vh;
+  background: url("/assets/hero-bg.png");
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hero-box {
+  position: relative;
+  max-width: 900px;
+  padding: 60px 40px;
+  text-align: center;
+  color: #fff;
+}
+
+.badge {
+  display: inline-block;
+  background: #e8fff1;
+  color: #0f7a4d;
+  padding: 6px 14px;
+  border-radius: 20px;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+
+.hero-box h1 {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 20px;
+}
+
+.hero-box h1 span {
+  color: #2ecc71;
+}
+
+.hero-box p {
+  font-size: 16px;
+  color: #d0d8e0;
+  max-width: 720px;
+  margin: 0 auto 30px;
+  line-height: 1.6;
+}
+
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+.btn {
+  padding: 12px 22px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-size: 15px;
+  transition: 0.3s;
+}
+
+.btn.primary {
+  background: #2ecc71;
+  color: #fff;
+}
+
+.btn.primary:hover {
+  background: #27ae60;
+}
+
+.btn.secondary {
+  border: 1px solid #fff;
+  background-color: #000;
+}
+
+.btn.secondary:hover {
+  background: #fff;
+  color: #000;
 }
