--- a/style.css
+++ b/style.css
@@ -128,6 +128,9 @@ nav{
 .btn.primary:hover {
   background: #27ae60;
 }
+.btn.primary:active{
+    background-color: aqua;
+}
 
 .btn.secondary {
   border: 1px solid #fff;
@@ -190,4 +193,112 @@ nav{
 }
 .sc{
     padding: 5px 0px;
+}
+
+
+
+/* brain setion */
+
+.brain-section{
+    margin: 100px 100px;
+}
+.knowledge-img{
+    height: 600px;
+    width: 600px;
+}
+.main-brain{
+    display: flex;
+    gap: 60px;
+}
+
+.brain-h{
+    font-size: 48px;
+    margin: 15px 0px;
+}
+.brain-text{
+    margin-top: 90px;
+}
+
+.check{
+    margin-top: 30px;
+   
+}
+.check-box{
+    display: flex;
+    gap: 8px;
+     margin-top: 10px;
+}
+.cta-wrapper {
+  padding: 80px 20px;
+  background: #ffffff;
+}
+
+.cta-box {
+  max-width: 1100px;
+  margin: auto;
+  padding: 70px 20px;
+  background: #F7F6F2;
+  border-radius: 12px;
+  text-align: center;
+}
+
+.cta-box h2 {
+  font-size: 32px;
+  font-weight: 700;
+  color: #0a2540;
+  margin-bottom: 14px;
+}
+
+.subtitle {
+  font-size: 15px;
+  color: #5b6b7a;
+  margin-bottom: 6px;
+}
+
+.small-text {
+  font-size: 14px;
+  color: #7a8896;
+  margin-bottom: 28px;
+}
+
+.cta-btn {
+  display: inline-block;
+  padding: 12px 26px;
+  background: #3a7f5c;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  border-radius: 6px;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.footer-text {
+  margin-top: 16px;
+  font-size: 12px;
+  color: #8a97a5;
+}
+
+
+/* foter */
+
+.footer {
+  background:#021428;
+  color: #d1d9e0;
+  padding: 50px 60px 20px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 30px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.footer-bottom {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 12px;
+  color: #9fb3c8;
 }
