--- a/style.css
+++ b/style.css
@@ -302,3 +302,13 @@ nav{
   font-size: 12px;
   color: #9fb3c8;
 }
+.icons{
+    margin-top: 20px;
+    display: flex;
+    gap: 10px;
+}
+#tt{
+    background-color: white;
+    border-radius: 50%;
+    padding: 10px;
+}
