--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ nav{
 
 .hero {
   height: 100vh;
-  background: url("/assets/hero-bg.png");
+  background: url("./assets/hero-bg.png");
   background-repeat: no-repeat;
   position: relative;
   display: flex;
