--- a/style.css
+++ b/style.css
@@ -9,35 +9,36 @@
   font-optical-sizing: auto;
   
 }
+
+/* navbar section */
+
+
 header{
-    background-color:#FFFFFF;
-     
-       
+    background-color:#FFFFFF;        
 }
+
 .logo{
     height: 60px;
     width: 140px;
 }
 
-.container{
-    
+.container{    
     max-width: 1350px;
     margin: auto;
-
-}
-nav img{
-    background: none;
 }
 
 .btn{
     border: none; 
-    border-radius: 4px;
     border-radius: 4px;
     background:  rgba(70, 145, 101, 1);
     padding: 12px 16px 12px 16px;
     font-size: 16px;
     font-weight: 600;
     color: rgba(255, 255, 255, 1);
+}
+
+.btn:hover {
+  background-color: #67b1e3;
 }
 
 nav{
@@ -52,10 +53,13 @@ nav{
     gap: 32px;
     list-style: none;
 }
+
 .menu a {
     text-decoration: none;
-
 }
+
+/* hero section */
+
 
 .hero {
   height: 100vh;
@@ -66,6 +70,7 @@ nav{
   align-items: center;
   justify-content: center;
 }
+
 .hero-box {
   position: relative;
   max-width: 900px;
@@ -83,7 +88,6 @@ nav{
   font-size: 14px;
   margin-bottom: 20px;
 }
-
 
 .hero-box h1 {
   font-size: 48px;
@@ -104,7 +108,6 @@ nav{
   line-height: 1.6;
 }
 
-
 .buttons {
   display: flex;
   justify-content: center;
@@ -113,7 +116,7 @@ nav{
 }
 
 .btn {
-  padding: 12px 22px;
+  padding: 16px 17px;
   border-radius: 6px;
   text-decoration: none;
   font-size: 15px;
@@ -121,13 +124,14 @@ nav{
 }
 
 .btn.primary {
-  background: #2ecc71;
+  background: rgba(70, 145, 101, 1);
   color: #fff;
 }
 
 .btn.primary:hover {
   background: #27ae60;
 }
+
 .btn.primary:active{
     background-color: aqua;
 }
@@ -141,11 +145,15 @@ nav{
   background: #fff;
   color: #000;
 }
+
+/* card section */
+
 .note{
     text-align: center;
-    padding-top: 10px;
+    padding-top: 16px;
     font-size: 40px;
 }
+
 .note-text{
     text-align: center;
     margin-top: 10px;
@@ -155,6 +163,7 @@ nav{
     display: flex;
     justify-content: center;
 }
+
 .main-box{
     display: flex;
     gap:15px;
@@ -175,6 +184,7 @@ nav{
     0 5px 5px rgba(0, 0, 0, 0.4),
     0 0 0 1px rgba(46, 204, 113, 0.15);
 }
+
 .icon{
     background-color: red;
     border-radius: 50%;
@@ -184,28 +194,33 @@ nav{
     justify-content: center;
     align-items: center;
 }
-.i-img{
+
+.card-img{
     height: 32px;
     width: 32px;
 }
-.your{
+
+.card-p{
     text-align: center;
 }
-.sc{
+
+.card-title{
     padding: 5px 0px;
 }
 
 
 
-/* brain setion */
+/* brain box setion */
 
 .brain-section{
     margin: 100px 100px;
 }
+
 .knowledge-img{
     height: 600px;
     width: 600px;
 }
+
 .main-brain{
     display: flex;
     gap: 60px;
@@ -213,21 +228,32 @@ nav{
 
 .brain-h{
     font-size: 48px;
+    font-weight: 700;
     margin: 15px 0px;
+    font-style: bold;
 }
+
 .brain-text{
     margin-top: 90px;
+}
+
+.bh5{
+  color:  rgba(70, 145, 101, 1);
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .check{
     margin-top: 30px;
    
 }
+
 .check-box{
     display: flex;
     gap: 8px;
      margin-top: 10px;
 }
+
 .cta-wrapper {
   padding: 80px 20px;
   background: #ffffff;
@@ -273,6 +299,10 @@ nav{
   transition: 0.3s;
 }
 
+.cta-btn:hover{
+  background-color: #243616;
+}
+
 .footer-text {
   margin-top: 16px;
   font-size: 12px;
@@ -280,7 +310,7 @@ nav{
 }
 
 
-/* foter */
+/*  project foter */
 
 .footer {
   background:#021428;
@@ -302,11 +332,13 @@ nav{
   font-size: 12px;
   color: #9fb3c8;
 }
+
 .icons{
     margin-top: 20px;
     display: flex;
     gap: 10px;
 }
+
 #tt{
     background-color: white;
     border-radius: 50%;
