--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+img{
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 
 .font-inter {
   font-family: "Inter", sans-serif;
@@ -172,14 +177,15 @@ nav{
 
 .box{
     background-color: #fff;
-    width: 322px;
+    width: 100%;
+    max-width: 322px;
     border-radius: 8px;
-    height: 300px;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 16px;
     box-shadow: 
     0 5px 5px rgba(0, 0, 0, 0.4),
     0 0 0 1px rgba(46, 204, 113, 0.15);
@@ -188,16 +194,17 @@ nav{
 .icon{
     background-color: red;
     border-radius: 50%;
-    height: 60px;
-    width: 60px;
+    height: 4rem;
+    width: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .card-img{
-    height: 32px;
-    width: 32px;
+    height: auto;
+    width: 2rem;
+    max-width: 100%;
 }
 
 .card-p{
